Updated VirtualBox setup page

--- a/AzureSite/homework1.html
+++ b/AzureSite/homework1.html
@@ -412,7 +412,7 @@ python setup.py install
                     <p>Take a screenshot of Wireshark witnessing the TLS renegotiation attack.</p>
                 </li>
                 <li>
-                    <p>What what the command that you used to perform the attack?</p>
+                    <p>What was the command that you used to perform the attack?</p>
                 </li>
             </ol>
 
