--- a/AzureSite/vbox.html
+++ b/AzureSite/vbox.html
@@ -83,7 +83,7 @@
                     <p>Open the image in VirtualBox</p>
                 </li>
             </ol>
-            <img src="images/mount-image.png" width="50%" />
+            <img src="images/vbox-open-image.png" width="75%" />
             <br /><br />
             <ol start="5">
                 <li>
@@ -93,7 +93,7 @@
                     </p>
                 </li>
             </ol>
-            <img src="images/vmware-bridge.png" width="100%" />
+            <img src="images/vbox-bridge.png" width="100%" />
             <br /><br />
             <ol start="6">
                 <li>
