--- a/AzureSite/homework1.html
+++ b/AzureSite/homework1.html
@@ -310,7 +310,7 @@
                 </li>
                 <li>
                     <p>
-                        On your host computer, navigate to a secure webpage such as the one you navigated to in step 24. Take a screenshot of the website's secure connection information now.
+                        On your host computer, navigate to a secure webpage such as the one you navigated to in step 31. Take a screenshot of the website's secure connection information now.
                     </p>
                 </li>
                 <li>
@@ -405,7 +405,7 @@ python setup.py install
             <pre class="prettyprint"><code>tls-renegotiation-poc.py -l 8080 -b ATTACKER_IP -t SERVER_IP:443 --inject {YOUR_CONTENT}</code></pre>
             <p>
                 ...where {YOUR_CONTENT} is the web request that you are injecting. This should be the same format as the web 
-                request strings that you passed to the openssl command previously. For example, a simple GET request could be "GET /". 
+                request strings that you passtesed to the openssl command previously. For example, a simple GET request could be "GET /". 
             </p>
             <ol start="42">
                 <li>
