--- a/AzureSite/homework2.html
+++ b/AzureSite/homework2.html
@@ -60,7 +60,7 @@
                 ourselves into known attack vectors and perform man-in-the-middle attacks. We will be making a 
                 Google Chrome extension from scratch to perform some malicious activity in a user's browser.
                 We will first walk you through a complete example of replacing information on a webpage without 
-                a user knowing anything has happaened. Then, you will use what you have learned to create a another 
+                a user knowing anything has happened. Then, you will use what you have learned to create a another 
                 Chrome extension that can obtain a user's login credentials for Facebook.com.
             </p>
 
@@ -343,7 +343,7 @@ if ( div ) {
                     <li>You can use <a href="http://www.w3schools.com/jsref/met_doc_getelementbyid.asp">getElementById()</a> to get a reference to an object on a web page by its id.</li>
                     <li>You can use <a href="http://www.w3schools.com/jsref/met_win_alert.asp">alert()</a> to pop up a dialog with a message inside.</li>
                     <li>Some HTML elements can contain an <a href="http://www.w3schools.com/jsref/event_onclick.asp">onclick</a> handler that defines what javascript code gets executed when the element is clicked.</li>
-                    <li>If the HTML or javascript you are trying to inject into a web page is not showing up properly, make sure you are escaping certain characters like single quotes and double quotes correctly.</li>
+                    <li>If the HTML or javascript you are trying to inject into a web page is not showing up properly, make sure you are escaping certain characters like single quotes and double quotes correctly. For example, you may need to use \' instead of ".</li>
                     <li>You can find the id of an element that you want to replace with new content by viewing a web page's souce code in the browser. 
                         In Chrome, you can right-click on a page and click "View page source". You can also look at this source code to figure out which 
                         content to inject into the web page.
