--- a/AzureSite/homework2.html
+++ b/AzureSite/homework2.html
@@ -63,6 +63,12 @@
                 a user knowing anything has happened. Then, you will use what you have learned to create a another 
                 Chrome extension that can obtain a user's login credentials for Facebook.com.
             </p>
+            <p>
+                If you find yourself spending more than two hours on this part of the homework, please let us know and we can provide 
+                further hints. We already give a lot of hints to point you in the right direction and point to potential problems, 
+                but we want to make sure that no one gets stuck for too long. It will probably take less time for those familiar with javascript 
+                and HTML.
+            </p>
 
             <br />
 
@@ -321,16 +327,21 @@ if ( div ) {
             <br />
 
             <h3><b>And Now For Your Part...</b></h3>
-            <p>Take what you learned in the walkthrough above and make another extension that fits the following criteria</p>
+            <p>
+                Take what you learned in the walkthrough above and make another extension that fits the following criteria. You can complete this with 
+                less than 10 additional lines of code.
+            </p>
             <ul>
                 <li>The default functionality should still work and pop up friendly messages when the smiley face button is clicked.</li>
                 <li>When a user logs in to Facebook, the user's email and password should be displayed in an alert box.</li>
-                <li>After your extensions displays the user's email and password, the Facebook login should still proceed normally.</li>
+                <li>After your extension displays the user's email and password, the Facebook login should still proceed normally.</li>
                 <li>A user should not be able to tell anything else is going on besides logging into Facebook. (Except for the alert box popping up)</li>
             </ul>
             <p>The Facebook page that you will be working with should look similar to this:</p>
             <img src="images\fb-login.png" width="50%"></img>
-            <p>If you don't want to create another extension from scratch, here is a .zip file that contains an extension with steps 1-12 completed above:</p>
+            <br />
+            <br />
+            <p>If you don't want to create another extension from scratch, here is a .zip file that contains an extension with steps 1-10 completed above:</p>
             <ul>
                 <li>
                     <p><a href="files\DailyAffirmations.zip">Download the .zip file</a></p>
