--- a/AzureSite/homework1.html
+++ b/AzureSite/homework1.html
@@ -76,7 +76,8 @@
             <p>
                 For this part of the homework, you will monitor different types of network traffic and report what you see. 
                 You will use the "wget" command to download some apps that we have created for you to use, so just make sure 
-                that you are downloading them into the directory that you want.
+                that you are downloading them into the directory that you want. Make sure you have execute permissions for 
+                the files you download (chmod +x).
             </p>
             <ol>
                 <li>
@@ -117,7 +118,13 @@
                     <p>Run "tcp_client". This will send TCP traffic for you to monitor.</p>
                 </li>
                 <li>
-                    <p>Observe the traffic in Wireshark and report the application data that you see being sent and received</p>
+                    <p>Observe the traffic in Wireshark and report the following</p>
+                    <ul>
+                        <li>Application data sent</li>
+                        <li>Application data received</li>
+                        <li>IP address of the server that "tcp_client" communicates with</li>
+                        <li>Port that the communication occurs on</li>
+                    </ul>
                 </li>
             </ol>
             <br />
@@ -131,7 +138,12 @@
                     <p>Run "http_client". This will send HTTP traffic for you to monitor.</p>
                 </li>
                 <li>
-                    <p>Observe the traffic in Wireshark and report the application data that you see being sent and received</p>
+                    <p>Observe the traffic in Wireshark and report the following</p>
+                    <ul>
+                        <li>IP address of the server that "http_client" communicates with</li>
+                        <li>"GET" request being made</li>
+                        <li>Application data received</li>
+                    </ul>
                 </li>
             </ol>
             <br />
@@ -145,7 +157,11 @@
                     <p>Run "https_client". This will send HTTPS traffic for you to monitor.</p>
                 </li>
                 <li>
-                    <p>Observe the traffic in Wireshark and report the application data that you see being sent and received</p>
+                    <p>Observe the traffic in Wireshark and report the following</p>
+                    <ul>
+                        <li>Which protocol is being used?</li>
+                        <li>Take a screenshot showing the "Client/Server Hello" message</li>
+                    </ul>
                 </li>
             </ol>
 
@@ -165,7 +181,7 @@
                     <p>Run "tar -xzvf openssl_decrypt_homework.tar.gz".</p>
                 </li>
                 <li>
-                    <p>Use "<a href="http://man.cx/openssl">openssl</a>" and the key that you just downloaded to decrypt the message that came with it.</p>
+                    <p>Use "<a href="http://man.cx/openssl">openssl</a>" and the key that you just downloaded to decrypt the message that came with it. What is the decrypted string?</p>
                 </li>
             </ol>
             <br />
@@ -180,13 +196,13 @@
                     <p>Run "<a href="http://man.cx/sslscan(1)">sslscan</a>" on the server.</p>
                 </li>
                 <li>
-                    <p>What is the lowest version of SSL supported by the server?</p>
+                    <p>How many ciphers are accepted?</p>
                 </li>
                 <li>
                     <p>What are the server's preferred ciphers?</p>
                 </li>
                 <li>
-                    <p>Use "openssl" to establish a connection with our server using the preferred SSL cipher. Use Wireshark to capture this activity.</p>
+                    <p>Use "openssl" to establish a connection with our server using the EXP-RC4-MD5 cipher. Use Wireshark to capture this activity.</p>
                 </li>
                 <li>
                     <p>
@@ -219,15 +235,15 @@
                 <li>Secure Server: 138.91.119.153</li>
             </ul>
             <br />
-            <p><u><b>Insecure Renegotion Allowed</b></u></p>
+            <p><u><b>Insecure Renegotiation Allowed</b></u></p>
             <ol start="21">
                 <li>
                     <p>What version of OpenSSL is running on the insecure server?</p>
                 </li>
             </ol>
             <p>
-                Hint: Use "openssl" similar to how you did above in the OpenSSL section, but perform a GET request on the webpage. Make sure that you find the OpenSSL 
-                version, not the SSL version.
+                Hint: Use "openssl" similar to how you did above in the OpenSSL section, but perform a GET request on the webpage. Make sure that you find the <b>OpenSSL 
+                version</b>, not the SSL version.
             </p>
             <ol start="22">
                 <li>
@@ -240,7 +256,7 @@
                     <p>What is the max number of connections that you see?</p>
                 </li>
                 <li>
-                    <p>Navigate back to the insecure server's webpage and observe how it behaves now. Take a screenshot of what it looks like. Be patient. It may take longer this time to load.</p>
+                    <p>After thc-ssl-dos reaches the max number of connections, reload the insecure server's webpage. How long does it take to load? Does it load like it did previously?</p>
                 </li>
                 <li>
                     <p>What was the command that you used to perform this attack?</p>
@@ -248,14 +264,14 @@
             </ol>
             <p>Make sure that you close the "thc-ssl-dos" application so that others can continue to perform the attack.</p>
             <br />
-            <p><u><b>Insecure Renegotion Disabled</b></u></p>
+            <p><u><b>Insecure Renegotiation Disabled</b></u></p>
             <ol start="27">
                 <li>
-                    <p>Perform an SSL DOS attack on the secure server</p>
+                    <p>Use OpenSSL to attack the secure server</p>
                 </li>
             </ol>
             <p>
-                Hint: Remember that insecure renegotiation is not allowed on the secure server. The previous attack will not work since renegotions 
+                Hint: Remember that insecure renegotiation is not allowed on the secure server. The previous attack will not work since renegotiations 
                 will not occur repeatedly for the same connection. You will need to write a script that opens many secure connections with the server.
                 Use the command that you used for the insecure server as a starting point and open the connections in parallel.
             </p>
@@ -263,17 +279,20 @@
                 Bash script <a href="http://www.cyberciti.biz/faq/bash-for-loop/">loops</a> and <a href="http://www.symkat.com/understanding-job-control-in-bash">background jobs</a> may help you out.
             </p>
             <p>You can view the current total percent of current CPU usage here to see if your attack is working: <a href="http://138.91.119.153/cpu.txt">http://138.91.119.153/cpu.txt</a></p>
+            <br/>
+            <img src="images/cpu.png" width="70%" />
+            <br/><br/>
             <ol start="28">
                 <li>
                     <p>Turn in the script that you used to perform the attack on the secure server.</p>
                 </li>
             </ol>
-            <p>Once again, make sure that you close the "thc-ssl-dos" application so that others can continue to perform the attack.</p>
+            <p>Once again, make sure that you close your script if it is still running so that others can continue to perform the attack.</p>
             <br />
-            <p><u><b>Are Secure Sites That You Use Suseptible to SSL DOS Attacks?</b></u></p>
+            <p><u><b>Are Secure Sites That You Use Susceptible to SSL DOS Attacks?</b></u></p>
             <ol start="29">
                 <li>
-                    <p>Check three secure (HTTPS) sites that you use to see if insecure renogitation is allowed.</p>
+                    <p>Check three secure (HTTPS) sites that you use to see if insecure renegotitation is allowed.</p>
                 </li>
             </ol>
             <p>
@@ -315,7 +334,7 @@
                 </li>
                 <li>
                     <p>
-                        Attempt to login to that website and observe what is output to your sslstrip.log in the Kali virtual machine. Take a screenshot or report the text inside of that log file. 
+                        Attempt to login to that website and observe what is output to your sslstrip log file in the Kali virtual machine. Take a screenshot or report the text inside of that log file. 
                         You may not want to use real credentials when attempting to login.
                     </p>
                 </li>
@@ -377,24 +396,29 @@ python setup.py install
                 </li>
                 <li>
                     <p>
-                        Observe in Wireshark or your browser how the log message is sent to be stored. Hint: Look at the querystring parameters and request type (GET, POST, etc.)
+                        Observe in your browser or Wireshark how the log message is sent to be stored. Hint: Look at the querystring parameters and request type (GET, POST, etc.)
                     </p>
                 </li>
                 <li>
                     <p>
                         Navigate to <a href="https://191.238.51.50/log.txt">https://191.238.51.50/log.txt</a> and observe how your message looks. 
-                        You should see the OS that you used (Linux) and the message that you entered.
+                        You should see the OS that you used (Linux) and the message that you entered. Report this text.
                     </p>
                 </li>
                 <li>
                     <p>
-                        Do the same thing from your host computer and you should see a different OS as long as your host computer is not Linux.
+                        Do the same thing from your host computer and you should see a different OS as long as your host computer is not Linux. Report this text.
                     </p>
                 </li>
                 <li>
                     <p>
                         Use "tls-renegotiation-poc.py" to perform a TLS renegotiation attack on the server's webpage from the Kali VM that results 
                         in a message being logged on behalf of the host computer.
+                    </p>
+                </li>
+                <li>
+                    <p>
+                        Report the new log text from the TLS renegotiation attack.
                     </p>
                 </li>
             </ol>
