--- a/AzureSite/homework1.html
+++ b/AzureSite/homework1.html
@@ -61,8 +61,12 @@
                 machine on the network. After you are done reading these packets you can forward them to the intended machine
                 leaving the victim none the wiser.
             </p>
+            <p>
+                We don't expect it to take this long to complete part 1 of the homework, but if you find yourself spending more than 
+                3-4 hours on it, please ask us for help. We don't want anyone to be stuck for too long.
+            </p>
             <p>You can use <a href="files/Part1.docx">this document</a> to fill in your answers so that you know exactly which information you need to submit.</p>
-
+             
             <br />
 
             <h3><b>Getting Started</b></h3>
@@ -273,7 +277,8 @@
             <p>
                 Hint: Remember that insecure renegotiation is not allowed on the secure server. The previous attack will not work since renegotiations 
                 will not occur repeatedly for the same connection. You will need to write a script that opens many secure connections with the server.
-                Use the command that you used for the insecure server as a starting point and open the connections in parallel.
+                Use the command that you used for the insecure server (step 18) as a starting point and open the connections in parallel. Use a 
+                supported cipher that has the highest number bits.
             </p>
             <p>
                 Bash script <a href="http://www.cyberciti.biz/faq/bash-for-loop/">loops</a> and <a href="http://www.symkat.com/understanding-job-control-in-bash">background jobs</a> may help you out.
@@ -443,8 +448,9 @@ python setup.py install
             <br />
 
             <h3><b>Part 1 Deliverables</b></h3>
-            <ul>
+            <ul>r
                 <li>Turn in a document with all of the requested answers above including screenshots.</li>
+                <li>You can use <a href="files/Part1.docx">this document</a> to fill in your answers so that you know exactly which information you need to submit.</li>
                 <li>Look <a href="deliverables.html">here</a> for information about everything you need to turn in and how you should submit it.</li>
             </ul>
         </div>
