--- a/AzureSite/homework1.html
+++ b/AzureSite/homework1.html
@@ -438,7 +438,7 @@ python setup.py install
             <pre class="prettyprint"><code>tls-renegotiation-poc.py -l 8080 -b ATTACKER_IP -t SERVER_IP:443 --inject {YOUR_CONTENT}</code></pre>
             <p>
                 ...where {YOUR_CONTENT} is the web request that you are injecting. This should be the same format as the web 
-                request strings that you pasted to the openssl command previously. For example, a simple GET request could be "GET /". 
+                request strings that you passed to the openssl command previously. For example, a simple GET request could be "GET /". 
                 Hint: You can look in Wireshark for help with retrieving this string.
             </p>
             <p>You may need to close the two "arpspoof" apps and the "tls-renegotiation-poc.py" app before you can use the internet normally on your host computer again.</p>
