--- a/AzureSite/vmware.html
+++ b/AzureSite/vmware.html
@@ -39,7 +39,7 @@
                             <li><a href="vbox.html">VirtualBox Setup</a></li>
                             <li><a href="homework1.html">Part 1: Starbucks Hates You</a></li>
                             <li><a href="homework2.html">Part 2: Chrome Extension</a></li>
-                            <li><a href="deliverables.html">Devliverables</a></li>
+                            <li><a href="deliverables.html">Deliverables</a></li>
                         </ul>
                     </li>
                     <li><a href="contact.html">Contact</a></li>
