Adding vbox Kali password

--- a/AzureSite/vbox.html
+++ b/AzureSite/vbox.html
@@ -67,7 +67,7 @@
                     <p>Download and install <a href="https://www.virtualbox.org/wiki/Downloads">Virtual Box</a></p>
                 </li>
                 <li>
-                    <p>Download the image of <a href="https://app.box.com/s/s1o6rted59oyk786oe26">Kali Linux for Virtual Box</a></p>
+                    <p>Download the image of <a href="https://app.box.com/s/s1o6rted59oyk786oe26">Kali Linux for Virtual Box</a>. The password is "cse825".</p>
                 </li>
             </ol>
             <p>
