Adding new Presentation slides

--- a/AzureSite/homework1.html
+++ b/AzureSite/homework1.html
@@ -300,7 +300,7 @@
             <p><u><b>Are Secure Sites That You Use Susceptible to SSL DOS Attacks?</b></u></p>
             <ol start="29">
                 <li>
-                    <p>Check three secure (HTTPS) sites that you use to see if insecure renegotitation is allowed.</p>
+                    <p>Check three secure (HTTPS) sites that you use to see if insecure renegotiation is allowed.</p>
                 </li>
             </ol>
             <p>
