Renaming slides PDF

--- a/AzureSite/home.html
+++ b/AzureSite/home.html
@@ -50,7 +50,7 @@
 
     <div class="container">
         <div class="starter-template">
-            <h3>Presentation Slides: <a href="files/PresentationSlides.pdf">PresentationSlides.pdf</a></h3>
+            <h3>Presentation Slides: <a href="files/MITM_Day1.pdf">PresentationSlides.pdf</a></h3>
             <h3>Homework: Follow links above</h3>
             <h3>Email: <a href="mailto:cse825.mitm@gmail.com">cse825.mitm@gmail.com</a></h3>
             <h3>Phone: (586) 907-7991</h3>
