Adding dev/null hint

--- a/AzureSite/homework1.html
+++ b/AzureSite/homework1.html
@@ -283,6 +283,7 @@
             <p>
                 Bash script <a href="http://www.cyberciti.biz/faq/bash-for-loop/">loops</a> and <a href="http://www.symkat.com/understanding-job-control-in-bash">background jobs</a> may help you out.
             </p>
+            <p>You can redirect all output to <a href="http://stackoverflow.com/questions/18012930/how-to-redirect-all-output-to-dev-null">/dev/null</a> if you don't want to see a lot of output from the script that you're running.</p>
             <p>You can view the current total percent of current CPU usage here to see if your attack is working: <a href="http://138.91.119.153/cpu.txt">http://138.91.119.153/cpu.txt</a></p>
             <p>Keep in mind that the page will not even load if your attack is working well enough.</p>
             <br />
