--- a/AzureSite/homework1.html
+++ b/AzureSite/homework1.html
@@ -318,6 +318,10 @@
 
             <h3><b>SSL Stripping</b></h3>
             <p>
+                Make sure that you use Firefox for this part of the homework. We did all of our testing in Chrome and it was working fine until the day before our 
+                presentation. An update to Chrome closed this hole and the attack was no longer possible.
+            </p>
+            <p>
                 For this part of the homework, you will be using "sslstrip" to "strip" out anything that makes an HTTPS request secure so that you can 
                 see the payload inside of it. The request can then be forwarded on as an HTTP request.
             </p>
