Network adapter info

--- a/AzureSite/vbox.html
+++ b/AzureSite/vbox.html
@@ -13,7 +13,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    
+
     <link href="css/site.css" rel="stylesheet">
 </head>
 
@@ -81,7 +81,8 @@
                 </li>
             </ol>
             <img src="images/vbox-open-image.png" width="75%" />
-            <br /><br />
+            <br />
+            <br />
             <ol start="4">
                 <li>
                     <p>
@@ -91,11 +92,16 @@
                 </li>
             </ol>
             <img src="images/vbox-bridge.png" width="100%" />
-            <br /><br />
+            <br />
+            <br />
             <ol start="5">
                 <li>
                     <p>Launch the virtual machine</p>
                 </li>
+                <p>
+                    You may get an error about not being able to find the network adapter. This because it's looking for the network adapter of the computer 
+                    that created the image. You can resolve this issue by choosing to "Edit Network Settings" and then picking your adapter.
+                </p>
                 <li>
                     <p>log in using the username "root" and the password "toor"</p>
                 </li>
