--- a/AzureSite/vbox.html
+++ b/AzureSite/vbox.html
@@ -98,10 +98,12 @@
                 <li>
                     <p>Launch the virtual machine</p>
                 </li>
-                <p>
-                    You may get an error about not being able to find the network adapter. This because it's looking for the network adapter of the computer 
+            </ol>
+            <p>
+                You may get an error about not being able to find the network adapter. This because it's looking for the network adapter of the computer 
                     that created the image. You can resolve this issue by choosing to "Change Network Settings" and then picking your adapter.
-                </p>
+            </p>
+            <ol start="6">
                 <li>
                     <p>log in using the username "root" and the password "toor"</p>
                 </li>
