--- a/AzureSite/vbox.html
+++ b/AzureSite/vbox.html
@@ -100,7 +100,7 @@
                 </li>
             </ol>
             <p>
-                You may get an error about not being able to find the network adapter. This because it's looking for the network adapter of the computer 
+                You may get an error about not being able to find the network adapter. This is because it's looking for the network adapter of the computer 
                     that created the image. You can resolve this issue by choosing to "Change Network Settings" and then picking your adapter.
             </p>
             <ol start="6">
