Adding ARP spoofing alert

--- a/AzureSite/homework2.html
+++ b/AzureSite/homework2.html
@@ -50,6 +50,12 @@
 
     <div class="container">
         <div class="starter-template">
+            <p style="border-color: red;color: red;border-width: 2px;border-style: solid;padding-left: 5px;padding-right: 5px">
+                Please do not do any of the homework attacks that use ARP spoofing on the school network. We think that MSU is watching the ARP cache and not allowing all of the attacks to work. If you only
+                have access to the school network, you may still be able to do the attacks if you hook up and use your own router.
+                Let us know if you have problems related to this.
+            </p>
+
             <h2 style="text-decoration: underline">Homework Part 2: Man-In-The-Browser Attack - Google Chrome Extension</h2>
             <br />
 
@@ -303,7 +309,7 @@
                 </li>
             </ol>
             <p>
-                <pre class="prettyprint lang-js">
+            <pre class="prettyprint lang-js">
 <code>var div = document.getElementById( &quot;gsr&quot; );
 
 if ( div ) {
@@ -315,7 +321,7 @@ if ( div ) {
                         '&lt;/h3&gt;&lt;/p&gt;' +
                     '&lt;/div&gt;';
 }</code></pre>
-                <p>This code finds an element with an id of "gsr" and replaces the HTML inside of it with some other HTML.</p>
+            <p>This code finds an element with an id of "gsr" and replaces the HTML inside of it with some other HTML.</p>
             <ol start="16">
                 <li>
                     <p>
