--- a/AzureSite/vbox.html
+++ b/AzureSite/vbox.html
@@ -50,6 +50,12 @@
 
     <div class="container">
         <div class="starter-template">
+            <p style="border-color: red;color: red;border-width: 2px;border-style: solid;padding-left: 5px;padding-right: 5px">
+                Please do not do any of the homework attacks that use ARP spoofing on the school network. We think that MSU is watching the ARP cache and not allowing all of the attacks to work. If you only
+                have access to the school network, you may still be able to do the attacks if you hook up and use your own router.
+                Let us know if you have problems related to this.
+            </p>
+
             <h2 style="text-decoration: underline">VirtualBox Setup</h2>
             <br />
 
@@ -101,7 +107,7 @@
             </ol>
             <p>
                 You may get an error about not being able to find the network adapter. This is because it's looking for the network adapter of the computer 
-                    that created the image. You can resolve this issue by choosing to "Change Network Settings" and then picking your adapter.
+                that created the image. You can resolve this issue by choosing to "Change Network Settings" and then picking your adapter.
             </p>
             <ol start="6">
                 <li>
