--- a/AzureSite/home.html
+++ b/AzureSite/home.html
@@ -50,6 +50,13 @@
 
     <div class="container">
         <div class="starter-template">
+            <p style="border-color: red;color: red;border-width: 2px;border-style: solid;padding-left: 5px;padding-right: 5px">
+                Please do not do any of the homework attacks that use ARP spoofing on the school network. We think that MSU is watching the ARP cache and not allowing all of the attacks to work. If you only
+                have access to the school network, you may still be able to do the attacks if you hook up and use your own router.
+                Let us know if you have problems related to this.
+            </p>
+            
+
             <h3>Presentation Slides: <a href="files/MITM_Day1.pdf">MITM_Day1.pdf</a></h3>
             <h3>Homework: Follow links above</h3>
             <h3>Email: <a href="mailto:cse825.mitm@gmail.com">cse825.mitm@gmail.com</a></h3>
