--- a/AzureSite/homework1.html
+++ b/AzureSite/homework1.html
@@ -50,6 +50,12 @@
 
     <div class="container">
         <div class="starter-template">
+            <p style="border-color: red;color: red;border-width: 2px;border-style: solid;padding-left: 5px;padding-right: 5px">
+                Please do not do any of the homework attacks that use ARP spoofing on the school network. We think that MSU is watching the ARP cache and not allowing all of the attacks to work. If you only
+                have access to the school network, you may still be able to do the attacks if you hook up and use your own router.
+                Let us know if you have problems related to this.
+            </p>
+
             <h2 style="text-decoration: underline">Homework Part 1: Becoming Dangerous at Starbucks</h2>
             <br />
 
@@ -247,7 +253,7 @@
             </ol>
             <p>
                 Hint: Use "openssl" similar to how you did above in the OpenSSL section, but perform a GET request on the webpage. Make sure that you find the <b>OpenSSL 
-                version</b>, not the SSL version.
+                                                                                                                                                                   version</b>, not the SSL version.
             </p>
             <ol start="22">
                 <li>
