Updating red alert text

--- a/AzureSite/vmware.html
+++ b/AzureSite/vmware.html
@@ -51,9 +51,9 @@
     <div class="container">
         <div class="starter-template">
             <p style="border-color: red;color: red;border-width: 2px;border-style: solid;padding-left: 5px;padding-right: 5px">
-                Please do not do any of the homework attacks that use ARP spoofing on the school network. We think that MSU is watching the ARP cache and not allowing all of the attacks to work. If you only
-                have access to the school network, you may still be able to do the attacks if you hook up and use your own router.
-                Let us know if you have problems related to this.
+                Please do not do any of the homework attacks that use ARP spoofing on the school network. We think that MSU is 
+                watching the ARP cache and not allowing all of the attacks to work. If you don't have access to another network, 
+                just turn in the command line arguments that you think you should have run.
             </p>
 
             <h2 style="text-decoration: underline">VMWare Player Setup</h2>
