--- a/AzureSite/solutions.html
+++ b/AzureSite/solutions.html
@@ -159,7 +159,7 @@
             <p><u><b>Insecure Renegotiation Allowed</b></u></p>
             <ol start="21">
                 <li>
-                    <p>What version of OpenSSL is running on the insecure server?<span class="ans">TLSv1/SSLv3</span></p>
+                    <p>What version of OpenSSL is running on the insecure server?<span class="ans">0.9.8h</span></p>
                 </li>
             </ol>
             <ol start="24">
