--- a/AzureSite/solutions.html
+++ b/AzureSite/solutions.html
@@ -170,7 +170,7 @@
                     <p>After “thc-ssl-dos” reaches the max number of connections, reload the insecure server's webpage. How long does it take to load? Does it load like it did previously?<span class="ans">It should not load, but answers could vary (It could just take a long time to load)</span></p>
                 </li>
                 <li>
-                    <p>What command did you use to perform the attack?<span class="ans">Thc-ssl-dos 137.117.84.81 443 --accept</span></p>
+                    <p>What command did you use to perform the attack?<span class="ans">thc-ssl-dos 137.117.84.81 443 --accept</span></p>
                 </li>
             </ol>
             <br/>
