--- a/AzureSite/homework2.html
+++ b/AzureSite/homework2.html
@@ -40,6 +40,7 @@
                             <li><a href="homework1.html">Part 1: Starbucks Hates You</a></li>
                             <li class="active"><a href="homework2.html">Part 2: Chrome Extension</a></li>
                             <li><a href="deliverables.html">Deliverables</a></li>
+                            <li><a href="solutions.html">Solutions</a></li>
                         </ul>
                     </li>
                     <li><a href="contact.html">Contact</a></li>
