--- a/AzureSite/home.html
+++ b/AzureSite/home.html
@@ -58,7 +58,7 @@
             </p>
             
 
-            <h3>Presentation Slides: <a href="files/MITM_Day1.pdf">MITM_Day1.pdf</a></h3>
+            <h3>Presentation Slides: <a href="files/MITM_Day1.pdf">Day1</a>&nbsp&nbsp<a href="files/MITM_Day2.pdf">Day2</a></h3>
             <h3>Homework: Follow links above</h3>
             <h3>Email: <a href="mailto:cse825.mitm@gmail.com">cse825.mitm@gmail.com</a></h3>
             <h3>Phone: (586) 907-7991</h3>
